# aoc

./: .gitignore  README.md  Temp.hs  aoc2024.cabal  build.gradle.kts  temp.txt
aoc-2015/: Cargo.toml  flake.nix
aoc-2015/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  main.rs
aoc-2015/src/util/: base26.rs  fs_utils.rs  mod.rs
aoc-2019/: LICENSE  aoc2019.cabal  day
aoc-2019/app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Main.hs
aoc-2020/: aoc2020.cabal  day  flake.nix
aoc-2020/app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Geometry.hs  Main.hs  Util.hs
aoc-2021/: README.md
aoc-2021/src/: Day02.kt  Day03.kt  Day07.kt
aoc-2022/src/: Day01.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt
aoc-2023/: README.md
aoc-2023/src/: Day01.kt  Day03.kt  Day04.kt
aoc-2024/: temp.hs
aoc-2024/app/: Day04.hs  Day06.hs  Day08.hs  Day09.hs  Day11.hs  Main.hs
aoc-2024/test/: Day02Spec.hs  Day03Spec.hs  Day05Spec.hs
aoc-2025/: .gitignore  build.gradle.kts  flake.nix  settings.gradle.kts
aoc-2025/gradle/wrapper/: gradle-wrapper.properties
aoc-2025/src/main/kotlin/: Main.kt
aoc-2025/src/main/kotlin/util/: utils.kt
aoc-2025/src/main/kotlin/xyz/colmmurphy/aoc/: Day01.kt  Main.kt  (+12 more)
app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day07.hs  Day09.hs  Day14.hs  Main.hs  Util.hs
src/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Utils.kt
test/: Day01Spec.hs  Day04Spec.hs  Day07Spec.hs  Day08Spec.hs  Spec.hs
(+9 files in other folders)
