[package]
name = "aoc-2015"
version = "0.1.0"
edition = "2024"
authors = ["Colm Murphy <colmmurphy016@gmail.com>"]

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
fancy-regex = "0.17.0"
itertools = "0.14.0"
md5 = "0.8.0"
rayon = "1.11.0"
regex = "1.12.2"

[profile.release]
codegen-units = 1
lto = "fat"
# rustflags = ["-C", "target-cpu=native"]
